implemented the registered-events page

--- a/events.html
+++ b/events.html
@@ -44,6 +44,10 @@
             button:hover {
                 background-color: #0056b3;
             }
+
+            .actions {
+                margin-top: 20px;
+            }
         </style>
     </head>
     <body>
